# rollie.dev

./: .bowerrc  .dockerignore  .editorconfig  .env.example  .gitignore  .travis.yml  Dockerfile  Makefile  README.md  api.go  app.go  app_test.go  bower.json  config.go  config.json  config.json-dist  dev.backend.Dockerfile  dev.frontend.Dockerfile  docker-compose.yml  fly.toml  github.go  go.mod  go.sum  index.go  main.go  package.json  template.go
backend/: Cargo.toml
backend/src/: error.rs  main.rs  routes.rs
backend/src/github/: contributions.graphql  repos.graphql
backend/src/resume/: doc.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.svelte  app.scss
frontend/src/components/: GithubContributions.svelte  GoogleAnalytics.svelte  LoadingIndicator.svelte
frontend/src/lib/: history.ts
frontend/src/routes/: Home.svelte  Projects.svelte  Resume.svelte
frontend/src/stores/: githubContributions.ts  metadata.ts  projects.ts  resume.ts
libs/: app.go  app_test.go  config.go  config_test.go  error.go  github.go  github_test.go  handler.go  subrouter.go  subrouter_test.go  template.go  template_test.go
routes/: api.go  index.go
static/data/: resume.json
static/javascripts/src/: config.js  router.js
static/stylesheets/src/: blog.less  sprites.less  style.less  tetris.less
terraform/: Makefile  README.md  alb.tf  cloudwatch.tf  ecs.tf  iam.tf  main.tf  network.tf  outputs.tf  security_groups.tf  variables.tf
terraform/templates/: app.json
views/: 404.html  index.html  layout.html  test.html
(+8 files in other folders)
