[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4.4"
actix-files = "^0.6"
env_logger = "^0.10"
log = "^0.4"
serde = "^1.0"
serde_json = "^1.0"
graphql_client = { version = "^0.13", features = ["reqwest-rustls"] }
reqwest = { version = "^0.11", default-features = false, features = ["rustls-tls"] }
